apps/plane/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plane
  namespace: plane
spec:
  parentRefs:
    - name: main
      namespace: traefik
  hostnames:
    - plane.k8s.hyperion.internal
    - plane.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /auth/
        - path:
            type: PathPrefix
            value: /graphql/
        - path:
            type: PathPrefix
            value: /marketplace/
      backendRefs:
        - name: plane-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /spaces/
      backendRefs:
        - name: plane-space
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /god-mode/
      backendRefs:
        - name: plane-admin
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /live/
      backendRefs:
        - name: plane-live
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /silo/
      backendRefs:
        - name: plane-silo
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /uploads/
      backendRefs:
        - name: plane-minio
          port: 9000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plane-web
          port: 3000
